@@ -11,7 +11,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import gov.nih.nci.evs.api.properties.ApplicationProperties;
 import gov.nih.nci.evs.api.util.ThreadLocalMapper;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 import java.util.HashMap;
 import java.util.List;
@@ -95,9 +95,15 @@ class FhirR5ClientSDKTests {
   private void parsePostmanCollectionAndExtractRawUrlValues() throws IOException {
     try {
       // Load the Postman collection JSON file from evsrestapi-client-SDK
-      final String uri = applicationProperties.getSdkBaseUri();
-      final URL url = new URL(uri + "/fhir-examples/EVSRESTAPI-FHIR-R5.postman_collection.json");
-      final URLConnection connection = url.openConnection();
+      final String sdkBaseUri = applicationProperties.getSdkBaseUri();
+      final String uri = sdkBaseUri + "/fhir-examples/EVSRESTAPI-FHIR-R5.postman_collection.json";
+      final URI url;
+      try {
+        url = new URI(uri);
+      } catch (java.net.URISyntaxException e) {
+        throw new IOException("Invalid URI syntax: " + uri, e);
+      }
+      final URLConnection connection = url.toURL().openConnection();
 
       // Optional: Set User-Agent header (some servers require this)
       connection.setRequestProperty("User-Agent", "Java Application");
